# OpenSddRag

./: .env.test.example  .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml
mcp-server/: .env.example  .env.test  Dockerfile  opensddrag.yaml  pyproject.toml
mcp-server/docs/architecture/: clean-architecture.md
mcp-server/src/opensddrag/: config.py
mcp-server/src/opensddrag/cli/: _common.py  _seeds.py  change.py  import_openspec.py  keys.py  main.py  project.py  search.py  server.py  session.py  skill.py  spec.py  task.py  workspace.py
mcp-server/src/opensddrag/db/: __init__.py  (+8 more)
mcp-server/tests/: conftest.py  test_api_key_repository.py  test_auth_middleware.py  test_cli_search.py  test_hybrid_search.py  test_import_openspec.py  test_mcp_harness_tools.py  test_migrations_bootstrap.py  test_read_strategy_benchmark.py  test_rule_repository.py  test_stdio_transport.py
mcp-server/tests/architecture/: test_imports.py
mcp-server/tests/benchmarks/: __init__.py  read_strategy.py
mcp-server/tests/core/: test_domain.py  test_execute_tool_usecase.py  test_list_tools_usecase.py
mcp-server/tests/infrastructure/: conftest.py  test_authorization_policy.py  test_composition.py  test_in_memory_rate_limiter.py  test_in_memory_tool_registry.py  test_json_schema_validator.py  test_list_artifacts_oracle.py  test_noop_authenticator.py  test_pg_logger.py  test_pg_rate_limiter.py  test_pg_rate_limiter_integration.py  test_pg_tool_registry.py  test_read_change_bundle.py
mcp-server/tests/mcp/: test_mcp_protocol_adapter.py  test_tools_list_snapshot.py
(+165 files in other folders)
