[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensddrag"
version = "0.1.0"
description = "SDD + Harness: Spec-Driven Development with PostgreSQL/pgvector and MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.3.5",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
opensddrag-server = "opensddrag.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/opensddrag"]

[tool.hatch.envs.default]
type = "uv"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx2>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: tests that require external services (docker compose up -d)",
]
